# ClassWise

./: README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/controller/: auth_controller.py
backend/app/model/: models.py
backend/app/repository/: auth_repository.py
backend/app/service/: auth_service.py
frontend/: package-lock.json
frontend/src/: App.js  index.js
frontend/src/pages/: DashboardPage.css  DashboardPage.js  ProfilePage.css  ProfilePage.js  SignInPage.css  SignInPage.js  SignUpPage.css  SignUpPage.js  WelcomePage.css  WelcomePage.js
